--- a/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_likedPost.xib
+++ b/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_likedPost.xib
@@ -106,6 +106,10 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNi-OB-25O">
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="74"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -170,6 +174,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
             <connections>
+                <outlet property="profile" destination="YNi-OB-25O" id="HHT-Wd-tkK"/>
                 <outlet property="subview" destination="Kbh-cM-KTv" id="Ugl-XL-8F0"/>
             </connections>
             <point key="canvasLocation" x="25" y="21.5"/>
