--- a/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_NormalPost.xib
+++ b/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_NormalPost.xib
@@ -61,6 +61,10 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ncD-zg-n5V">
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="74"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -130,6 +134,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
             <connections>
+                <outlet property="profile" destination="ncD-zg-n5V" id="6WT-Th-eG2"/>
                 <outlet property="subview" destination="ysK-p7-Smy" id="PMJ-cI-Tqm"/>
             </connections>
         </tableViewCell>
