--- a/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_commentedPost.xib
+++ b/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_commentedPost.xib
@@ -109,6 +109,10 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UHH-3B-KPL">
+                                        <rect key="frame" x="0.0" y="0.0" width="276" height="74"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -231,6 +235,7 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="profile" destination="UHH-3B-KPL" id="vOo-iQ-wMU"/>
                 <outlet property="subview" destination="ZeK-dJ-Yyd" id="sAy-vO-tsg"/>
             </connections>
             <point key="canvasLocation" x="25" y="145.5"/>
