--- a/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_sharedPost.xib
+++ b/LinkedinClone/LinkedinClone/App/Home/Home cell/Cell_sharedPost.xib
@@ -84,6 +84,10 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="dots.png"/>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OLm-AI-BJ3">
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="74"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -195,6 +199,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="mainsubview" destination="9Hh-th-Ffh" id="lCX-lT-xGy"/>
+                <outlet property="profile" destination="OLm-AI-BJ3" id="oCR-mq-9lb"/>
                 <outlet property="subview" destination="Dfl-Da-enI" id="aLL-IJ-orv"/>
             </connections>
         </tableViewCell>
